@@ -5,6 +5,7 @@ ChangeLog
     * new CONNECTION_TIOMEOUT constant set to 30s
     * better Event repr
     * estimated_to_seconds do not need seconds
+    * FILE_CHANGED event sends free_space
 
 0.3.0 (2021-03-22)
     * fix update file structure
